new solutions added

--- a/python-zadania-1 - zaliczenie.ipynb
+++ b/python-zadania-1 - zaliczenie.ipynb
@@ -198,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": 2,
       "id": "starting-organizer",
       "metadata": {},
       "outputs": [
@@ -208,7 +208,7 @@
               "True"
             ]
           },
-          "execution_count": 124,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -230,32 +230,64 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "vocal-mouth",
       "metadata": {
         "scrolled": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "100 °F to 37.8 °C\n",
+            "37.8 °C to 100.0 °F\n"
+          ]
+        }
+      ],
       "source": [
         "# Napisze funkcje, ktora zamieni temperaturę w stopniach Celsiusza na stopnie Fahrenheita i wypisze obie wartości na ekran.\n",
-        "def farh_na_celc(...)\n",
-        "...\n",
+        "def farh_na_celc(fahr):\n",
+        "    celc = round((fahr - 32) * 5/9, 1)\n",
+        "    print(fahr, \"°F\", \"to\", celc, \"°C\")\n",
         "\n",
         "# Napisz funkcję, kwartość temperatury w stopniach Fahrenheita, następnie przekonwertuje ją na stopnie Celsiusza i wypisze obie wartości na ekran.\n",
-        "def celc_na_farh(...):\n",
-        "..."
+        "def celc_na_farh(celc):\n",
+        "    fahr = round(celc * 9/5 + 32, 1)\n",
+        "    print(celc, \"°C\", \"to\", fahr, \"°F\")\n",
+        "\n",
+        "farh_na_celc(100)\n",
+        "\n",
+        "celc_na_farh(37.8)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "civilian-scheme",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "lato\n"
+          ]
+        }
+      ],
       "source": [
         "# Napisz funkcje, która zwróci nazwę pory roku dla danego miesiąca\n",
-        "def poraroku(...)\n",
-        "..."
+        "def poraroku(month):\n",
+        "    pory_roku = {\"zima\": (\"grudzień\", \"styczeń\", \"luty\"),\n",
+        "                 \"wiosna\": (\"marzec\", \"kwiecień\", \"maj\"),\n",
+        "                 \"lato\": (\"czerwiec\", \"lipiec\", \"sierpień\"),\n",
+        "                 \"jesień\": (\"wrzesień\", \"październik\", \"listopad\")}\n",
+        "    for pora, miesiace in pory_roku.items():\n",
+        "        if month.lower() in miesiace:\n",
+        "            return print(pora)\n",
+        "    print(\"Podano niewłaściwą nazwę miesiąca.\")\n",
+        "\n",
+        "poraroku(\"czerwiec\")"
       ]
     },
     {
@@ -515,7 +547,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.2"
+      "version": "3.10.0"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
