new solutions added

--- a/python-zadania-1 - zaliczenie.ipynb
+++ b/python-zadania-1 - zaliczenie.ipynb
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 19,
       "id": "vocal-mouth",
       "metadata": {
         "scrolled": true
@@ -249,12 +249,12 @@
         "# Napisze funkcje, ktora zamieni temperaturę w stopniach Celsiusza na stopnie Fahrenheita i wypisze obie wartości na ekran.\n",
         "def farh_na_celc(fahr):\n",
         "    celc = round((fahr - 32) * 5/9, 1)\n",
-        "    print(fahr, \"°F\", \"to\", celc, \"°C\")\n",
+        "    return print(fahr, \"°F\", \"to\", celc, \"°C\")\n",
         "\n",
         "# Napisz funkcję, kwartość temperatury w stopniach Fahrenheita, następnie przekonwertuje ją na stopnie Celsiusza i wypisze obie wartości na ekran.\n",
         "def celc_na_farh(celc):\n",
         "    fahr = round(celc * 9/5 + 32, 1)\n",
-        "    print(celc, \"°C\", \"to\", fahr, \"°F\")\n",
+        "    return print(celc, \"°C\", \"to\", fahr, \"°F\")\n",
         "\n",
         "farh_na_celc(100)\n",
         "\n",
@@ -292,17 +292,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "romantic-sister",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "kwiecień\n",
+            "2\n"
+          ]
+        }
+      ],
       "source": [
         "# Napisz funkcje, która zamienic nr miesiąca na jego nazwę (np. 1 -> styczen) i odwrotnie\n",
-        "def nazwa_miesiaca(...)\n",
-        "...\n",
+        "def nazwa_miesiaca(nr):\n",
+        "    miesiace = {1: \"styczeń\",\n",
+        "                2: \"luty\",\n",
+        "                3: \"marzec\",\n",
+        "                4: \"kwiecień\",\n",
+        "                5: \"maj\",\n",
+        "                6: \"czerwiec\",\n",
+        "                7: \"lipiec\",\n",
+        "                8: \"sierpień\",\n",
+        "                9: \"wrzesień\",\n",
+        "                10: \"październik\",\n",
+        "                11: \"listopad\",\n",
+        "                12: \"grudzień\"}\n",
+        "    return print(miesiace[nr])\n",
         "\n",
-        "def nr_miesiaca(...)\n",
-        ".."
+        "\n",
+        "def nr_miesiaca(nazwa):\n",
+        "    miesiace = {\"styczeń\": 1,\n",
+        "                \"luty\": 2,\n",
+        "                \"marzec\": 3,\n",
+        "                \"kwiecień\": 4,\n",
+        "                \"maj\": 5,\n",
+        "                \"czerwiec\": 6,\n",
+        "                \"lipiec\": 7,\n",
+        "                \"sierpień\": 8,\n",
+        "                \"wrzesień\": 9,\n",
+        "                \"październik\": 10,\n",
+        "                \"listopad\": 11,\n",
+        "                \"grudzień\": 12}\n",
+        "    return print(miesiace[nazwa.lower()])\n",
+        "\n",
+        "nazwa_miesiaca(4)\n",
+        "\n",
+        "nr_miesiaca(\"luty\")"
       ]
     },
     {
