--- a/python-zadania-1 - zaliczenie.ipynb
+++ b/python-zadania-1 - zaliczenie.ipynb
@@ -357,13 +357,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "0790058a",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "python-cwiczenia-1-rozwiazania.ipynb\n",
+            "python-cwiczenia-1.ipynb\n",
+            "python-klasy-cwiczenia-1.ipynb\n",
+            "python-klasy-cwiczenia-2.ipynb\n",
+            "python-wyklad-1.ipynb\n",
+            "python-wyklad-2.ipynb\n"
+          ]
+        }
+      ],
       "source": [
         "def pliki(katalog):\n",
-        "..."
+        "    import os\n",
+        "    dir_path = \"./\" + katalog + \"/\"\n",
+        "    list_of_files = []\n",
+        "    for path in os.listdir(dir_path):\n",
+        "    # check if current path is a file\n",
+        "        if os.path.isfile(os.path.join(dir_path, path)):\n",
+        "            list_of_files.append(path)\n",
+        "    # Order alphabetically\n",
+        "    list_of_files.sort()\n",
+        "    print(*list_of_files, sep=\"\\n\")\n",
+        "\n",
+        "pliki(\"notebooks\")"
       ]
     },
     {
@@ -378,13 +402,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "0e687b88",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "python-cwiczenia-1-rozwiazania.ipynb\n",
+            "python-cwiczenia-1.ipynb\n",
+            "python-klasy-cwiczenia-1.ipynb\n",
+            "python-klasy-cwiczenia-2.ipynb\n",
+            "python-wyklad-1.ipynb\n",
+            "python-wyklad-2.ipynb\n"
+          ]
+        }
+      ],
       "source": [
         "def pliki_roz(katalog, ext):\n",
-        "..."
+        "    import os\n",
+        "    dir_path = \"./\" + katalog + \"/\"\n",
+        "    list_of_files = []\n",
+        "    for path in os.listdir(dir_path):\n",
+        "    # check if current path is a file\n",
+        "        if os.path.isfile(os.path.join(dir_path, path)) and path.split(\".\")[-1] == ext:\n",
+        "            list_of_files.append(path)\n",
+        "    # Order alphabetically\n",
+        "    list_of_files.sort()\n",
+        "    print(*list_of_files, sep=\"\\n\")\n",
+        "\n",
+        "pliki_roz(\"notebooks\", \"ipynb\")"
       ]
     },
     {
@@ -585,7 +633,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.0"
+      "version": "3.11.4"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
