solution to task 4 added

--- a/python-klasy-zadania.ipynb
+++ b/python-klasy-zadania.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "51acb77c",
    "metadata": {},
@@ -34,6 +35,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fa2d9fc4",
    "metadata": {},
@@ -82,6 +84,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b5b2d44d",
    "metadata": {},
@@ -163,6 +166,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "04e467d1",
    "metadata": {},
@@ -179,10 +183,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "id": "9e1ab5ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Blad operacji arytmetycznej\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
@@ -201,8 +213,15 @@
     "\n",
     "\n",
     "# ------------- dodaj swoj kod tutaj --------------\n",
-    "\n",
-    "make_noise()\n",
+    "try:\n",
+    "    make_noise()\n",
+    "    print(\"Sukces! Brak błędów\")\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    # lub z ładniejszym formatowaniem\n",
+    "    # import traceback\n",
+    "    # traceback.print_exc()\n",
+    "    \n",
     "\n",
     "# ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^    \n",
     "    \n",
@@ -211,6 +230,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "97575025",
    "metadata": {},
@@ -224,6 +244,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7c0d3bb4",
    "metadata": {},
@@ -246,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
