minor modifications and alternative solutions

--- a/python-zadania-1 - zaliczenie.ipynb
+++ b/python-zadania-1 - zaliczenie.ipynb
@@ -24,10 +24,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "impressive-cruise",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Lrmismdlrstae ars\n",
+            "ta aiu u eu.Vsiuu epsprs\n",
+            "usat gtlo upnis ain\n",
+            "etblmat rtu eiuaulmopr\n",
+            "upnis gtage elneqesdlssd utsage \n",
+            "\n",
+            "Lrmismdlrstae ars\n",
+            "ta aiu u eu.Vsiuu epsprs\n",
+            "usat gtlo upnis ain\n",
+            "etblmat rtu eiuaulmopr\n",
+            "upnis gtage elneqesdlssd utsage \n"
+          ]
+        }
+      ],
       "source": [
         "# Wypisz z następującego zdania co 2 znak.\n",
         "\n",
@@ -38,45 +56,104 @@
         "Suspendisse eget augue. Pellentesque sodales sed, luctus augue. \"\"\"\n",
         "\n",
         "\n",
+        "# Dłusze rozwiązanie\n",
         "for pos, letter in enumerate(txt):\n",
         "    if pos % 2 == 0:\n",
-        "        print(letter)"
+        "        print(letter, end=\"\")\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "# Krótsze rozwiązanie\n",
+        "print(txt[::2])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "australian-count",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Lorem sit Etiam neque purus eget sapien pretium Suspendisse Pellentesque luctus\n"
+          ]
+        }
+      ],
       "source": [
         "# Wypisz ze zdania co 3 wyraz (bez kropek).\n",
         "import re\n",
         "# words = re.split(\" |, |\\. |\\.\\\\n|\\\\n\", txt) - problem pustego ostatniego elementu listy\n",
         "words = re.findall(r'\\w+', txt)\n",
         "\n",
+        "co_trzeci = []\n",
+        "\n",
         "for pos, word in enumerate(words):\n",
         "    if pos % 3 == 0:\n",
-        "        print(word)   # Bez przecinków i kropek"
+        "        co_trzeci.append(word)\n",
+        "\n",
+        "print(*co_trzeci)   # Bez przecinków i kropek"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "accompanied-angola",
+      "execution_count": 18,
+      "id": "0edd42a9",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Lorem sit Etiam neque purus eget sapien pretium Suspendisse Pellentesque luctus\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Wypisz ze zdania co 3 wyraz (bez kropek). - krótsze rozwiązanie\n",
+        "import re\n",
+        "words = re.findall(r'\\w+', txt)\n",
+        "print(*words[::3])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "id": "7aebda2b",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Lorem dolor ipsum sit amet mauris.\\nEtiam dapibus eu, neque. Vestibulum tempus purus.\\nDuis ante eget leo. Suspendisse sapien.\\nVestibulum ante pretium vehicula ullamcorper.\\nSuspendisse eget augue. Pellentesque sodales sed, luctus augue. '"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Zamień szystkie 'ipsum' w zdaniu na 'dolor' i odwrotnie.\n",
-        "txt.replace('ipsum', 'dol_or').replace('dolor', 'ips_um').replace('ips_um', 'ipsum').replace('dol_or', 'dolor')\n"
+        "txt.replace('ipsum', 'dol_or').replace('dolor', 'ipsum').replace('dol_or', 'dolor')\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "brief-conspiracy",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Najdłuższe słowo to: Pellentesque o długości 12 liter.\n",
+            "Najkrótsze słowo to: eu o długości 2 liter.\n"
+          ]
+        }
+      ],
       "source": [
         "# Wypisz najdłuższe i najkrótsze słowa oraz ich długość.\n",
         "import re\n",
@@ -85,27 +162,37 @@
         "shortest_len = len(words[0])\n",
         "longest_len = len(words[0])\n",
         "\n",
-        "shortest_pos = 0\n",
-        "longest_pos = 0\n",
+        "shortest_word = None\n",
+        "longest_word = None\n",
         "\n",
-        "for pos, word in enumerate(words):\n",
+        "for word in words:\n",
         "    if len(word) > longest_len:\n",
         "        longest_len = len(word)\n",
-        "        longest_pos = pos\n",
+        "        longest_word = word\n",
         "    if len(word) < shortest_len:\n",
         "        shortest_len = len(word)\n",
-        "        shortest_pos = pos\n",
+        "        shortest_word = word\n",
         "\n",
-        "print(\"Najdłuższe słowo to: \", words[longest_pos])\n",
-        "print(\"Najkrótsze słowo to: \", words[shortest_pos])"
+        "print(\"Najdłuższe słowo to:\", longest_word, \"o długości\", longest_len, \"liter.\")\n",
+        "print(\"Najkrótsze słowo to:\", shortest_word, \"o długości\", shortest_len, \"liter.\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "id": "liberal-graph",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Orygnalna treść wiadomości.\n",
+            "Libtmzomz givść drzwlnlśxr.\n",
+            "Orygnalna treść wiadomości.\n"
+          ]
+        }
+      ],
       "source": [
         "# Napisz dwie funkcje: szyfrującą oraz deszyfrująca, zastosuj dowolny (moze być własny) algorytm szyfrowania.\n",
         "def szyfruj(text):\n",
