solution to 1st task added

--- a/python-klasy-zadania.ipynb
+++ b/python-klasy-zadania.ipynb
@@ -28,11 +28,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e068255d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prostokat(a=10, b=50)\n",
+      "Prostokat(a=10, b=50): pole=500\n",
+      "False\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Prostokat:\n",
+    "    def __init__(self, a, b):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f\"{__class__.__name__}(a={self.a}, b={self.b})\"\n",
+    "\n",
+    "    def __eq__(self, _obj: object):\n",
+    "        if type(_obj) != type(self):\n",
+    "            return False\n",
+    "\n",
+    "        if self.a == _obj.a and self.b == _obj.b:\n",
+    "            return True\n",
+    "        elif self.a == _obj.b and self.b == _obj.a:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "            \n",
+    "    def __lt__(self, _obj):\n",
+    "        if type(_obj) != type(self):\n",
+    "            return False\n",
+    "        \n",
+    "        if self.pole() < _obj.pole():\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    \n",
+    "    def pole(self):\n",
+    "        return self.a * self.b\n",
+    "\n",
+    "    def obwod(self):\n",
+    "        return 2 * (self.a + self.b)\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "figura = Prostokat(10, 50)\n",
+    "figura2 = Prostokat(11, 50)\n",
+    "\n",
+    "print(f\"{figura}: pole={figura.pole()}\")\n",
+    "\n",
+    "print(figura == figura2)\n",
+    "\n",
+    "print(figura < figura2)"
+   ]
   },
   {
    "attachments": {},
