minor changes to task 1

--- a/python-klasy-zadania.ipynb
+++ b/python-klasy-zadania.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "e068255d",
    "metadata": {},
    "outputs": [
@@ -36,20 +36,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prostokat(a=10, b=50)\n",
       "Prostokat(a=10, b=50): pole=500\n",
+      "False\n",
+      "True\n",
       "False\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -80,6 +71,9 @@
     "            return True\n",
     "        else:\n",
     "            return False\n",
+    "        \n",
+    "    def __gt__(self, _obj):\n",
+    "        return not (self.__lt__(_obj))\n",
     "    \n",
     "    def pole(self):\n",
     "        return self.a * self.b\n",
@@ -96,7 +90,9 @@
     "\n",
     "print(figura == figura2)\n",
     "\n",
-    "print(figura < figura2)"
+    "print(figura < figura2)\n",
+    "\n",
+    "print(figura > figura2)"
    ]
   },
   {
