--- a/python-klasy-zadania.ipynb
+++ b/python-klasy-zadania.ipynb
@@ -73,7 +73,10 @@
     "            return False\n",
     "        \n",
     "    def __gt__(self, _obj):\n",
-    "        return not (self.__lt__(_obj))\n",
+    "        if type(_obj) != type(self):\n",
+    "            return False\n",
+    "        else:\n",
+    "            return not (self.__lt__(_obj))\n",
     "    \n",
     "    def pole(self):\n",
     "        return self.a * self.b\n",
@@ -138,11 +141,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "457f61d2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/6\n",
+      "7/15\n",
+      "2 1/7\n",
+      "1/6 + 7/15 = 2 1/7\n",
+      "1/6 * 7/15 = 7/90\n",
+      "5/10\n",
+      "1/2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Ulamek:\n",
+    "    def __init__(self, num, den) -> None:\n",
+    "        self.num = num\n",
+    "        self.den = den\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        if self.num / self.den > 1:\n",
+    "            self.floor = self.num // self.den\n",
+    "            self.rest = self.num % self.den\n",
+    "            return f\"{self.floor} {self.rest}/{self.den}\"\n",
+    "        else:\n",
+    "            return f\"{self.num}/{self.den}\"\n",
+    "    \n",
+    "    def __eq__(self, _obj: object) -> bool:\n",
+    "        if type(_obj) != type(self):\n",
+    "            return False\n",
+    "        \n",
+    "        if self.num == _obj.num and self.den == _obj.den:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "        \n",
+    "    def __lt__(self, _obj: object) -> bool:\n",
+    "        if type(_obj) != type(self):\n",
+    "            return False\n",
+    "        \n",
+    "        if (self.num / self.den) < (_obj.num / _obj.den):\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "        \n",
+    "    def __gt__(self, _obj: object) -> bool:\n",
+    "        if type(_obj) != type(self):\n",
+    "            return False\n",
+    "        else:\n",
+    "            return not (self.__lt__(_obj))\n",
+    "        \n",
+    "    def __add__(self, _obj: object) -> object:\n",
+    "        self.lcd = self.lcm(self.den, _obj.den)\n",
+    "        self.num1 = self.num * (self.lcd / self.den)\n",
+    "        self.num2 = _obj.num * (self.lcd / _obj.den)\n",
+    "        self.res_num = self.num1 + self.num2\n",
+    "        return Ulamek(int(self.res_num), int(self.lcd))\n",
+    "    \n",
+    "    def __mul__(self, _obj) -> object:\n",
+    "        self.new_num = self.num * _obj.num\n",
+    "        self.new_den = self.den * _obj.den\n",
+    "        return Ulamek(self.new_num, self.new_den)\n",
+    "    \n",
+    "    def gcd(self, a, b):\n",
+    "        if (a == 0):\n",
+    "            return b\n",
+    "        else:\n",
+    "            return self.gcd(b % a, a)\n",
+    "        \n",
+    "    def lcm(self, a, b):\n",
+    "        return (a * b) / self.gcd(a, b)\n",
+    "    \n",
+    "    def skracaj(self) -> object:\n",
+    "        self.gc_divisor = self.gcd(self.num, self.den)\n",
+    "        self.new_num = int(self.num / self.gc_divisor)\n",
+    "        self.new_den = int(self.den / self.gc_divisor)\n",
+    "        return Ulamek(self.new_num, self.new_den)\n",
+    "\n",
+    "    \n",
+    "u1 = Ulamek(1, 6)\n",
+    "u2 = Ulamek(7, 15)   # 19/30\n",
+    "\n",
+    "u3 = Ulamek(15, 7)\n",
+    "\n",
+    "print(u1)\n",
+    "print(u2)\n",
+    "print(u3)\n",
+    "\n",
+    "u4 = u1 + u2\n",
+    "print(f\"{u1} + {u2} = {u3}\")\n",
+    "\n",
+    "u5 = u1 * u2\n",
+    "print(f\"{u1} * {u2} = {u5}\")\n",
+    "\n",
+    "u6 = Ulamek(5, 10)\n",
+    "print(u6)\n",
+    "\n",
+    "u7 = u6.skracaj()\n",
+    "print(u7)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "bd4a562e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19 / 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# python Program to determine\n",
+    "# LCD of two fractions and\n",
+    "# Perform addition on fractions\n",
+    "\n",
+    "# function to calculate gcd\n",
+    "# or hcf of two numbers.\n",
+    "def gcd(a, b):\n",
+    "\t\n",
+    "\tif (a == 0):\n",
+    "\t\treturn b\n",
+    "\treturn gcd(b % a, a)\n",
+    "\n",
+    "\n",
+    "# function to calculate\n",
+    "# lcm of two numbers.\n",
+    "def lcm(a, b):\n",
+    "\t\n",
+    "\treturn (a * b) / gcd(a, b)\n",
+    "\n",
+    "\n",
+    "def printSum(num1, den1,\n",
+    "\t\t\t\tnum2, den2):\n",
+    "\t\t\t\t\n",
+    "\t# least common multiple\n",
+    "\t# of denominators LCD\n",
+    "\t# of 6 and 15 is 30.\n",
+    "\tlcd = lcm(den1, den2);\n",
+    "\t\n",
+    "\t# Computing the numerators\n",
+    "\t# for LCD: Writing 1/6 as\n",
+    "\t# 5/30 and 7/15 as 14/30\n",
+    "\tnum1 *= (lcd / den1)\n",
+    "\tnum2 *= (lcd / den2)\n",
+    "\n",
+    "\t# Our sum is going to be\n",
+    "\t# res_num/lcd\n",
+    "\tres_num = num1 + num2;\n",
+    "\tprint( int(res_num) , \"/\" ,\n",
+    "\t\t\t\t\tint(lcd))\n",
+    "\n",
+    "# Driver Code\n",
+    "# First fraction is 1/6\n",
+    "num1 = 7\n",
+    "den1 = 15\n",
+    "\n",
+    "# Second fraction is 7/15\n",
+    "num2 = 1\n",
+    "den2 = 6\n",
+    "printSum(num1, den1, num2, den2);\n",
+    "\n",
+    "# This code is contributed\n",
+    "# by Sam007\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "2b138956",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7%14"
+   ]
   },
   {
    "attachments": {},
