--- a/python-klasy-zadania.ipynb
+++ b/python-klasy-zadania.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "457f61d2",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,9 @@
       "1/6 + 7/15 = 2 1/7\n",
       "1/6 * 7/15 = 7/90\n",
       "5/10\n",
-      "1/2\n"
+      "1/2\n",
+      "\n",
+      "20/40 -> 1/2\n"
      ]
     }
    ],
@@ -244,7 +246,12 @@
     "print(u6)\n",
     "\n",
     "u7 = u6.skracaj()\n",
-    "print(u7)\n"
+    "print(u7)\n",
+    "\n",
+    "u8 = Ulamek(20, 40)\n",
+    "\n",
+    "(print())\n",
+    "print(f\"{u8} -> {u8.skracaj()}\")\n"
    ]
   },
   {
@@ -317,27 +324,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "2b138956",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "7%14"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "b5b2d44d",
@@ -380,11 +366,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "8fc34c48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kolo(r=10): pole=314.16\n",
+      "Prostokat(a=10, b=20): pole=200.00\n",
+      "Kwadrat(a=30): pole=900.00\n",
+      "Trojkat(a=10, h=5): pole=25.00\n"
+     ]
+    }
+   ],
    "source": [
+    "import math\n",
+    "\n",
     "class Figura:\n",
     "    def przedstawSie(self):\n",
     "        '''\n",
@@ -403,19 +402,64 @@
     "        return self.przedstawSie()\n",
     "\n",
     "# ------------- dodaj swoj kod tutaj --------------\n",
+    "class Kolo(Figura):\n",
+    "    def __init__(self, r):\n",
+    "        self.r = r\n",
+    "    \n",
+    "    def przedstawSie(self):\n",
+    "        return f\"{__class__.__name__}(r={self.r})\"\n",
     "\n",
+    "    def liczPole(self):\n",
+    "        self.area = math.pi * math.pow(self.r, 2)\n",
+    "        return round(self.area, 2)\n",
+    "    \n",
+    "class Kwadrat(Figura):\n",
+    "    def __init__(self, a):\n",
+    "        self.a = a\n",
+    "    \n",
+    "    def przedstawSie(self):\n",
+    "        return f\"{__class__.__name__}(a={self.a})\"\n",
+    "\n",
+    "    def liczPole(self):\n",
+    "        self.area = math.pow(self.a, 2)\n",
+    "        return round(self.area,2)\n",
+    "\n",
+    "class Prostokat(Figura):\n",
+    "    def __init__(self, a, b):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "    \n",
+    "    def przedstawSie(self):\n",
+    "        return f\"{__class__.__name__}(a={self.a}, b={self.b})\"\n",
+    "\n",
+    "    def liczPole(self):\n",
+    "        self.area = self.a * self.b\n",
+    "        return round(self.area, 2)\n",
+    "\n",
+    "class Trojkat(Figura):\n",
+    "    def __init__(self, a, h):\n",
+    "        self.a = a\n",
+    "        self.h = h\n",
+    "    \n",
+    "    def przedstawSie(self):\n",
+    "        return f\"{__class__.__name__}(a={self.a}, h={self.h})\"\n",
+    "\n",
+    "    def liczPole(self):\n",
+    "        self.area = 0.5 * self.a * self.h\n",
+    "        return round(self.area, 2)\n",
     "\n",
     "# ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
     "    \n",
     "figury = [\n",
     "    Kolo(r=10),\n",
     "    Prostokat(a=10, b=20),\n",
-    "    Kwadrat(a=30)\n",
+    "    Kwadrat(a=30),\n",
+    "    Trojkat(a=10, h=5)\n",
     "   \n",
     "]\n",
     "\n",
     "for f in figury:\n",
-    "    print(f\"{f}: pole={f.liczPole()}\")\n",
+    "    print(f\"{f}: pole={f.liczPole():.2f}\")\n",
     "    "
    ]
   },
