--- a/python-klasy-zadania.ipynb
+++ b/python-klasy-zadania.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "id": "457f61d2",
    "metadata": {},
    "outputs": [
@@ -157,17 +157,58 @@
       "5/10\n",
       "1/2\n",
       "\n",
-      "20/40 -> 1/2\n"
+      "20/40 -> 1/2\n",
+      "Help on function skracaj in module __main__:\n",
+      "\n",
+      "skracaj(self) -> object\n",
+      "    Metoda do skracania ułamków zwykłych.\n",
+      "    Korzysta z metody:\n",
+      "    __gcd__ do wyznaczenia najwiekszego wspólnego dzielnika dla licznika i mianownika.\n",
+      "    \n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    None\n",
+      "    \n",
+      "    Returns\n",
+      "    ----------\n",
+      "    object\n",
+      "        skrócony ułamek zwykły - nowy obiekt klasy Ulamek\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "class Ulamek:\n",
+    "    '''\n",
+    "    To jest klasa Ulamek obsługująca podstawowe\n",
+    "    działania na ułamkach zwykłych.\n",
+    "    '''\n",
     "    def __init__(self, num, den) -> None:\n",
+    "        '''\n",
+    "        Konstruktor\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        num - licznik ułamka\n",
+    "        den - mianownik ułamka\n",
+    "\n",
+    "        Returns\n",
+    "        ----------\n",
+    "        None\n",
+    "        '''\n",
     "        self.num = num\n",
     "        self.den = den\n",
     "    \n",
     "    def __str__(self) -> str:\n",
+    "        '''\n",
+    "        Metoda do wyświetlania ułamków w postaci ułamków właściwych,\n",
+    "        albo liczb mieszanych (w przypadku ułamków niewłaściwich).\n",
+    "\n",
+    "        Returns\n",
+    "        ----------\n",
+    "        string\n",
+    "            zawierający odpowiednią reprezentację ułamka\n",
+    "        '''\n",
     "        if self.num / self.den > 1:\n",
     "            self.floor = self.num // self.den\n",
     "            self.rest = self.num % self.den\n",
@@ -176,6 +217,20 @@
     "            return f\"{self.num}/{self.den}\"\n",
     "    \n",
     "    def __eq__(self, _obj: object) -> bool:\n",
+    "        ''''\n",
+    "        Metoda do porównywania ułamków.\n",
+    "        Jezeli porównywane ułamki są równe zwrócona zostaje wartość True.\n",
+    "        \n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        _obj : object\n",
+    "            inny objekt klasy Ulamek do porównania\n",
+    "\n",
+    "        Returns\n",
+    "        ---------\n",
+    "        bool\n",
+    "            wynik porównania - True / False\n",
+    "        '''\n",
     "        if type(_obj) != type(self):\n",
     "            return False\n",
     "        \n",
@@ -185,6 +240,20 @@
     "            return False\n",
     "        \n",
     "    def __lt__(self, _obj: object) -> bool:\n",
+    "        '''\n",
+    "        Metoda do porównywania ułamków.\n",
+    "        Jezeli ułamek jest mniejszy od ułamka, z którym jest porównywany zwaracana zostaje wartość True.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        _obj : object\n",
+    "            inny obiekt klasy Ulamek do porównania\n",
+    "\n",
+    "        Returns\n",
+    "        ----------\n",
+    "        bool\n",
+    "            wynik porównania - True / False\n",
+    "        '''\n",
     "        if type(_obj) != type(self):\n",
     "            return False\n",
     "        \n",
@@ -194,34 +263,125 @@
     "            return False\n",
     "        \n",
     "    def __gt__(self, _obj: object) -> bool:\n",
+    "        '''\n",
+    "        Metoda do porównywannia ułamków.\n",
+    "        Jezeli ułamek jest większy od ułameka, z którym jest porównywany zwaracana zostaje wartość True.\n",
+    "        Wywołuje metodę __lt__ i zwraca wartość przeciwną.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        _obj : object\n",
+    "            inny obiekt klasy Ulamek do porównania\n",
+    "\n",
+    "        Returns\n",
+    "        ----------\n",
+    "        bool\n",
+    "            wynik porównania - True / False\n",
+    "\n",
+    "        '''\n",
     "        if type(_obj) != type(self):\n",
     "            return False\n",
     "        else:\n",
     "            return not (self.__lt__(_obj))\n",
     "        \n",
     "    def __add__(self, _obj: object) -> object:\n",
-    "        self.lcd = self.lcm(self.den, _obj.den)\n",
+    "        '''\n",
+    "        Metoda do dodawania ułamków.\n",
+    "        Korzysta z metod:\n",
+    "        __gcd__ do wyznaczenia najwiekszego wspólnego dzielnika;\n",
+    "        __lcm__ do wyznaczenia najmnijeszego wspólnego mianownika.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        _obj : object\n",
+    "            inny obiek klsay Ulamek do porównania\n",
+    "        \n",
+    "        Returns\n",
+    "        ----------\n",
+    "        object\n",
+    "            wynik dodawania ułamków - nowy obiekt klas Ulamek\n",
+    "        '''\n",
+    "        self.lcd = self.__lcm__(self.den, _obj.den)\n",
     "        self.num1 = self.num * (self.lcd / self.den)\n",
     "        self.num2 = _obj.num * (self.lcd / _obj.den)\n",
     "        self.res_num = self.num1 + self.num2\n",
     "        return Ulamek(int(self.res_num), int(self.lcd))\n",
     "    \n",
     "    def __mul__(self, _obj) -> object:\n",
+    "        '''\n",
+    "        Metoda do mnozenia ułamków.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        _obj : object\n",
+    "            inny obiekt klasy Ulamek\n",
+    "\n",
+    "        Returns\n",
+    "        ----------\n",
+    "        object\n",
+    "            wynik mnozenia ułamków - nowy obiekt klasy Ulamek\n",
+    "        '''\n",
     "        self.new_num = self.num * _obj.num\n",
     "        self.new_den = self.den * _obj.den\n",
     "        return Ulamek(self.new_num, self.new_den)\n",
     "    \n",
-    "    def gcd(self, a, b):\n",
+    "    def __gcd__(self, a, b):\n",
+    "        '''\n",
+    "        Metoda do wyznaczania największego wspólnego dzielnika dwóch liczb.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        a : int\n",
+    "            pierwsza liczba\n",
+    "        b : int\n",
+    "            druga liczba\n",
+    "\n",
+    "        Returns\n",
+    "        ----------\n",
+    "        int\n",
+    "            największy wspolny dzielnik\n",
+    "        '''\n",
     "        if (a == 0):\n",
     "            return b\n",
     "        else:\n",
-    "            return self.gcd(b % a, a)\n",
+    "            return self.__gcd__(b % a, a)\n",
     "        \n",
-    "    def lcm(self, a, b):\n",
-    "        return (a * b) / self.gcd(a, b)\n",
+    "    def __lcm__(self, a, b):\n",
+    "        '''\n",
+    "        Metoda do wyznaczania najmnieszego wspólnego mianownika dwóch ułamków zwykłych.\n",
+    "        Korzysta z metody:\n",
+    "        __gcd__ do wyznaczenia największego wspólnego dzielnika dwóch liczb.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        a : int\n",
+    "            mianownik pierwszego ułamka zwykłego\n",
+    "        b : int\n",
+    "            mianownik drugiego ułamka zwykłego\n",
+    "\n",
+    "        Returns\n",
+    "        ----------\n",
+    "        int\n",
+    "            największy wspólny mianownik dwóch ułamków zwykłych\n",
+    "        '''\n",
+    "        return (a * b) / self.__gcd__(a, b)\n",
     "    \n",
     "    def skracaj(self) -> object:\n",
-    "        self.gc_divisor = self.gcd(self.num, self.den)\n",
+    "        '''\n",
+    "        Metoda do skracania ułamków zwykłych.\n",
+    "        Korzysta z metody:\n",
+    "        __gcd__ do wyznaczenia najwiekszego wspólnego dzielnika dla licznika i mianownika.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        None\n",
+    "        \n",
+    "        Returns\n",
+    "        ----------\n",
+    "        object\n",
+    "            skrócony ułamek zwykły - nowy obiekt klasy Ulamek\n",
+    "        '''\n",
+    "        self.gc_divisor = self.__gcd__(self.num, self.den)\n",
     "        self.new_num = int(self.num / self.gc_divisor)\n",
     "        self.new_den = int(self.den / self.gc_divisor)\n",
     "        return Ulamek(self.new_num, self.new_den)\n",
@@ -251,7 +411,9 @@
     "u8 = Ulamek(20, 40)\n",
     "\n",
     "(print())\n",
-    "print(f\"{u8} -> {u8.skracaj()}\")\n"
+    "print(f\"{u8} -> {u8.skracaj()}\")\n",
+    "\n",
+    "help(Ulamek.skracaj)\n"
    ]
   },
   {
