--- a/python-klasy-zadania.ipynb
+++ b/python-klasy-zadania.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "id": "e068255d",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 83,
    "id": "457f61d2",
    "metadata": {},
    "outputs": [
@@ -149,6 +149,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "True\n",
       "1/6\n",
       "7/15\n",
       "2 1/7\n",
@@ -189,15 +190,25 @@
     "\n",
     "        Parameters\n",
     "        ----------\n",
-    "        num - licznik ułamka\n",
-    "        den - mianownik ułamka\n",
+    "        num : int\n",
+    "            licznik ułamka\n",
+    "        den : int\n",
+    "            mianownik ułamka\n",
     "\n",
     "        Returns\n",
     "        ----------\n",
     "        None\n",
     "        '''\n",
+    "        if den == 0:\n",
+    "            raise Exception(\"ERROR! Mianownik nie moze być równy 0!\")\n",
+    "        elif type(num) != int:\n",
+    "            raise Exception(f\"ERROR! Licznik musi być liczbą całkowitą (int).\")\n",
+    "        elif type(den) != int:\n",
+    "            raise Exception(\"ERROR! Mianownik musi być liczbą całkowitą (int).\")\n",
+    "        \n",
     "        self.num = num\n",
-    "        self.den = den\n",
+    "        self.den = den \n",
+    "\n",
     "    \n",
     "    def __str__(self) -> str:\n",
     "        '''\n",
@@ -234,7 +245,7 @@
     "        if type(_obj) != type(self):\n",
     "            return False\n",
     "        \n",
-    "        if self.num == _obj.num and self.den == _obj.den:\n",
+    "        if (self.num / self.den) == (_obj.num / _obj.den):\n",
     "            return True\n",
     "        else:\n",
     "            return False\n",
@@ -388,9 +399,12 @@
     "\n",
     "    \n",
     "u1 = Ulamek(1, 6)\n",
-    "u2 = Ulamek(7, 15)   # 19/30\n",
+    "u2 = Ulamek(7, 15)\n",
     "\n",
     "u3 = Ulamek(15, 7)\n",
+    "\n",
+    "print(u1 < u2)\n",
+    "\n",
     "\n",
     "print(u1)\n",
     "print(u2)\n",
@@ -414,6 +428,39 @@
     "print(f\"{u8} -> {u8.skracaj()}\")\n",
     "\n",
     "help(Ulamek.skracaj)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "819934fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "ERROR! Licznik musi być liczbą całkowitą (int).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[84], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m uu \u001b[39m=\u001b[39m Ulamek(\u001b[39m1.1\u001b[39;49m,\u001b[39m2\u001b[39;49m)\n\u001b[1;32m      2\u001b[0m \u001b[39mprint\u001b[39m(uu)\n",
+      "Cell \u001b[0;32mIn[83], line 24\u001b[0m, in \u001b[0;36mUlamek.__init__\u001b[0;34m(self, num, den)\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mERROR! Mianownik nie moze być równy 0!\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     23\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mtype\u001b[39m(num) \u001b[39m!=\u001b[39m \u001b[39mint\u001b[39m:\n\u001b[0;32m---> 24\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mERROR! Licznik musi być liczbą całkowitą (int).\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     25\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mtype\u001b[39m(den) \u001b[39m!=\u001b[39m \u001b[39mint\u001b[39m:\n\u001b[1;32m     26\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mERROR! Mianownik musi być liczbą całkowitą (int).\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mException\u001b[0m: ERROR! Licznik musi być liczbą całkowitą (int)."
+     ]
+    }
+   ],
+   "source": [
+    "uu = Ulamek(1.1,2)\n",
+    "print(uu)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0ca4ecbe",
+   "metadata": {},
+   "source": [
+    "źrodlo"
    ]
   },
   {
@@ -643,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 66,
    "id": "9e1ab5ad",
    "metadata": {},
    "outputs": [
@@ -678,10 +725,9 @@
     "    print(\"Sukces! Brak błędów\")\n",
     "except Exception as e:\n",
     "    print(e)\n",
-    "    # lub z ładniejszym formatowaniem\n",
+    "    #lub z ładniejszym formatowaniem\n",
     "    # import traceback\n",
     "    # traceback.print_exc()\n",
-    "    \n",
     "\n",
     "# ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^    \n",
     "    \n",
@@ -708,7 +754,69 @@
    "cell_type": "markdown",
    "id": "7c0d3bb4",
    "metadata": {},
-   "source": []
+   "source": [
+    "class Aplikacja:\n",
+    "    metoda_1(self):\n",
+    "        pass\n",
+    "    \n",
+    "    metoda_skrot_info(self):\n",
+    "    \"\"\"\n",
+    "    Wyswietla skrót informacji na ekranie\n",
+    "    \"\"\"\n",
+    "        pass\n",
+    "\n",
+    "    metoda_wyslij_SMS(self):\n",
+    "    \"\"\"\n",
+    "    Metoda umozliwiajaca wyslanie sms z powiadomieniem.\n",
+    "    \"\"\"\n",
+    "        pass\n",
+    "\n",
+    "    metoda_pobierz_dane(self):\n",
+    "    \"\"\"\n",
+    "    Metoda umozliwiajaca poranie danych z serwisu.\n",
+    "    \"\"\"\n",
+    "        pass\n",
+    "\n",
+    "    metoda_stworz_wykres(self):\n",
+    "    \"\"\"\n",
+    "    Metoda umozliwiajaca tworzenie interaktywnych wykresów.\n",
+    "    \"\"\"\n",
+    "        pass\n",
+    "\n",
+    "class Gielda(Aplikacja):\n",
+    "    metoda_g1(self):\n",
+    "        pass\n",
+    "\n",
+    "    metoda_pobierz_dane(self):\n",
+    "        >pobiera dane z serwisu<\n",
+    "    \n",
+    "    metoda_skrot_info(self):\n",
+    "        >wyswietl skrot informacji na ekranie<\n",
+    "\n",
+    "    metoda_sworz_wykres(self):\n",
+    "        >pokaz kursy akcji na wykresie<\n",
+    "\n",
+    "class Pogoda(Aplikacja):\n",
+    "    metoda_p1(self):\n",
+    "        pass\n",
+    "\n",
+    "    metoda_wyslij_SMS(self):\n",
+    "        >wyslij sms<\n",
+    "\n",
+    "    metoda_pobierz_dane(self):\n",
+    "        >pobiera dane z serwisu<\n",
+    "\n",
+    "    metoda_sworz_wykres(self):\n",
+    "        >pokaz wilgotnośc na wykresie<\n",
+    "\n",
+    "class Newsy(Aplikacja):\n",
+    "    metoda_pogrupuj_informacje(self):\n",
+    "        >wyswietla informacje tylko z Polski<\n",
+    "\n",
+    "    metoda_pobierz_dane(self):\n",
+    "        >pobiera dane z serwisu<\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
