--- a/python-klasy-zadania.ipynb
+++ b/python-klasy-zadania.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 96,
    "id": "457f61d2",
    "metadata": {},
    "outputs": [
@@ -432,26 +432,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "819934fd",
+   "execution_count": 97,
+   "id": "497a197e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "Exception",
-     "evalue": "ERROR! Licznik musi być liczbą całkowitą (int).",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[84], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m uu \u001b[39m=\u001b[39m Ulamek(\u001b[39m1.1\u001b[39;49m,\u001b[39m2\u001b[39;49m)\n\u001b[1;32m      2\u001b[0m \u001b[39mprint\u001b[39m(uu)\n",
-      "Cell \u001b[0;32mIn[83], line 24\u001b[0m, in \u001b[0;36mUlamek.__init__\u001b[0;34m(self, num, den)\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mERROR! Mianownik nie moze być równy 0!\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     23\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mtype\u001b[39m(num) \u001b[39m!=\u001b[39m \u001b[39mint\u001b[39m:\n\u001b[0;32m---> 24\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mERROR! Licznik musi być liczbą całkowitą (int).\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     25\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mtype\u001b[39m(den) \u001b[39m!=\u001b[39m \u001b[39mint\u001b[39m:\n\u001b[1;32m     26\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mERROR! Mianownik musi być liczbą całkowitą (int).\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mException\u001b[0m: ERROR! Licznik musi być liczbą całkowitą (int)."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1/4 > 2/4\n",
+      "1 1/4 + 2/4 = 1 3/4\n",
+      "1 1/4 * 2/4 = 10/16\n",
+      "10/16 -> 5/8\n"
      ]
     }
    ],
    "source": [
-    "uu = Ulamek(1.1,2)\n",
-    "print(uu)\n"
+    "a = Ulamek(5, 4)\n",
+    "b = Ulamek(2, 4)\n",
+    "\n",
+    "if a < b :\n",
+    "    print(f\"{a} < {b}\")\n",
+    "elif a == b:\n",
+    "    print(f\"{a} == {b}\")\n",
+    "else:\n",
+    "    print(f\"{a} > {b}\")\n",
+    "\n",
+    "c = a + b\n",
+    "print(f\"{a} + {b} = {c}\")\n",
+    "\n",
+    "c = a * b\n",
+    "print(f\"{a} * {b} = {c}\")\n",
+    "print(f\"{c} -> {c.skracaj()}\")"
    ]
   },
   {
@@ -460,7 +472,7 @@
    "id": "0ca4ecbe",
    "metadata": {},
    "source": [
-    "źrodlo"
+    "## Kod źródłowy dla metody dodawania dwóch ułamków zwykłych."
    ]
   },
   {
@@ -529,7 +541,7 @@
     "printSum(num1, den1, num2, den2);\n",
     "\n",
     "# This code is contributed\n",
-    "# by Sam007\n"
+    "# by Sam007"
    ]
   },
   {
@@ -725,10 +737,9 @@
     "    print(\"Sukces! Brak błędów\")\n",
     "except Exception as e:\n",
     "    print(e)\n",
-    "    #lub z ładniejszym formatowaniem\n",
+    "    # # lub z ładniejszym formatowaniem\n",
     "    # import traceback\n",
     "    # traceback.print_exc()\n",
-    "\n",
     "# ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^    \n",
     "    \n",
     "    \n",
@@ -755,68 +766,100 @@
    "id": "7c0d3bb4",
    "metadata": {},
    "source": [
-    "class Aplikacja:\n",
-    "    metoda_1(self):\n",
-    "        pass\n",
-    "    \n",
-    "    metoda_skrot_info(self):\n",
-    "    \"\"\"\n",
-    "    Wyswietla skrót informacji na ekranie\n",
-    "    \"\"\"\n",
-    "        pass\n",
+    "    class Aplikacja:\n",
+    "        metoda_1(self):\n",
+    "            pass\n",
+    "        \n",
+    "        metoda_skrot_info(self):\n",
+    "        \"\"\"\n",
+    "        Wyswietla skrót informacji na ekranie\n",
+    "        \"\"\"\n",
+    "            pass\n",
     "\n",
-    "    metoda_wyslij_SMS(self):\n",
-    "    \"\"\"\n",
-    "    Metoda umozliwiajaca wyslanie sms z powiadomieniem.\n",
-    "    \"\"\"\n",
-    "        pass\n",
+    "        metoda_wyslij_SMS(self):\n",
+    "        \"\"\"\n",
+    "        Metoda umozliwiajaca wyslanie sms z powiadomieniem.\n",
+    "        \"\"\"\n",
+    "            pass\n",
     "\n",
-    "    metoda_pobierz_dane(self):\n",
-    "    \"\"\"\n",
-    "    Metoda umozliwiajaca poranie danych z serwisu.\n",
-    "    \"\"\"\n",
-    "        pass\n",
+    "        metoda_pobierz_dane(self):\n",
+    "        \"\"\"\n",
+    "        Metoda umozliwiajaca poranie danych z serwisu.\n",
+    "        \"\"\"\n",
+    "            pass\n",
     "\n",
-    "    metoda_stworz_wykres(self):\n",
-    "    \"\"\"\n",
-    "    Metoda umozliwiajaca tworzenie interaktywnych wykresów.\n",
-    "    \"\"\"\n",
-    "        pass\n",
+    "        metoda_stworz_wykres(self):\n",
+    "        \"\"\"\n",
+    "        Metoda umozliwiajaca tworzenie interaktywnych wykresów.\n",
+    "        \"\"\"\n",
+    "            pass\n",
     "\n",
-    "class Gielda(Aplikacja):\n",
-    "    metoda_g1(self):\n",
-    "        pass\n",
+    "    class Gielda(Aplikacja):\n",
+    "        metoda_g1(self):\n",
+    "            pass\n",
     "\n",
-    "    metoda_pobierz_dane(self):\n",
-    "        >pobiera dane z serwisu<\n",
-    "    \n",
-    "    metoda_skrot_info(self):\n",
-    "        >wyswietl skrot informacji na ekranie<\n",
+    "        metoda_pobierz_dane(self):\n",
+    "            >pobiera dane z serwisu<\n",
+    "        \n",
+    "        metoda_skrot_info(self):\n",
+    "            >wyswietl skrot informacji na ekranie<\n",
     "\n",
-    "    metoda_sworz_wykres(self):\n",
-    "        >pokaz kursy akcji na wykresie<\n",
+    "        metoda_sworz_wykres(self):\n",
+    "            >pokaz kursy akcji na wykresie<\n",
     "\n",
-    "class Pogoda(Aplikacja):\n",
-    "    metoda_p1(self):\n",
-    "        pass\n",
+    "    class Pogoda(Aplikacja):\n",
+    "        metoda_p1(self):\n",
+    "            pass\n",
     "\n",
-    "    metoda_wyslij_SMS(self):\n",
-    "        >wyslij sms<\n",
+    "        metoda_wyslij_SMS(self):\n",
+    "            >wyslij sms<\n",
     "\n",
-    "    metoda_pobierz_dane(self):\n",
-    "        >pobiera dane z serwisu<\n",
+    "        metoda_pobierz_dane(self):\n",
+    "            >pobiera dane z serwisu<\n",
     "\n",
-    "    metoda_sworz_wykres(self):\n",
-    "        >pokaz wilgotnośc na wykresie<\n",
+    "        metoda_sworz_wykres(self):\n",
+    "            >pokaz wilgotnośc na wykresie<\n",
     "\n",
-    "class Newsy(Aplikacja):\n",
-    "    metoda_pogrupuj_informacje(self):\n",
-    "        >wyswietla informacje tylko z Polski<\n",
+    "    class Newsy(Aplikacja):\n",
+    "        metoda_pogrupuj_informacje(self):\n",
+    "            >wyswietla informacje tylko z Polski<\n",
     "\n",
-    "    metoda_pobierz_dane(self):\n",
-    "        >pobiera dane z serwisu<\n",
+    "        metoda_pobierz_dane(self):\n",
+    "            >pobiera dane z serwisu<\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcded42b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b2177e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc9e3124",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c07114c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
