final commit (I hope so)

--- a/python-klasy-zadania.ipynb
+++ b/python-klasy-zadania.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 100,
    "id": "e068255d",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 101,
    "id": "457f61d2",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 102,
    "id": "497a197e",
    "metadata": {},
    "outputs": [
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 103,
    "id": "8fc34c48",
    "metadata": {},
    "outputs": [
@@ -634,16 +634,6 @@
     "        self.area = math.pi * math.pow(self.r, 2)\n",
     "        return round(self.area, 2)\n",
     "    \n",
-    "class Kwadrat(Figura):\n",
-    "    def __init__(self, a):\n",
-    "        self.a = a\n",
-    "    \n",
-    "    def przedstawSie(self):\n",
-    "        return f\"{__class__.__name__}(a={self.a})\"\n",
-    "\n",
-    "    def liczPole(self):\n",
-    "        self.area = math.pow(self.a, 2)\n",
-    "        return round(self.area,2)\n",
     "\n",
     "class Prostokat(Figura):\n",
     "    def __init__(self, a, b):\n",
@@ -656,6 +646,16 @@
     "    def liczPole(self):\n",
     "        self.area = self.a * self.b\n",
     "        return round(self.area, 2)\n",
+    "    \n",
+    "\n",
+    "class Kwadrat(Prostokat):\n",
+    "    def __init__(self, a):\n",
+    "        self.a = a\n",
+    "        self.b = a\n",
+    "    \n",
+    "    def przedstawSie(self):\n",
+    "        return f\"{__class__.__name__}(a={self.a})\"\n",
+    "    \n",
     "\n",
     "class Trojkat(Figura):\n",
     "    def __init__(self, a, h):\n",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 104,
    "id": "9e1ab5ad",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error: Blad operacji arytmetycznej\n"
+      "Error: dzielenie przez zero\n"
      ]
     }
    ],
@@ -761,103 +761,46 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "7c0d3bb4",
+   "id": "6950fb4f",
    "metadata": {},
    "source": [
-    "    class Aplikacja:\n",
-    "        metoda_1(self):\n",
-    "            pass\n",
-    "        \n",
-    "        metoda_skrot_info(self):\n",
-    "        \"\"\"\n",
-    "        Wyswietla skrót informacji na ekranie\n",
-    "        \"\"\"\n",
-    "            pass\n",
+    "## Odpowiedź\n",
     "\n",
-    "        metoda_wyslij_SMS(self):\n",
-    "        \"\"\"\n",
-    "        Metoda umozliwiajaca wyslanie sms z powiadomieniem.\n",
-    "        \"\"\"\n",
-    "            pass\n",
+    "Wygląd aplikacji przypominać będzie preglądarkę internetową. W zaleznosci od preferencji, uzytkownik będzie mógł dodać nowe zakładki z interesującymi go informacjami (sport, giełda itp).\n",
     "\n",
-    "        metoda_pobierz_dane(self):\n",
-    "        \"\"\"\n",
-    "        Metoda umozliwiajaca poranie danych z serwisu.\n",
-    "        \"\"\"\n",
-    "            pass\n",
-    "\n",
-    "        metoda_stworz_wykres(self):\n",
-    "        \"\"\"\n",
-    "        Metoda umozliwiajaca tworzenie interaktywnych wykresów.\n",
-    "        \"\"\"\n",
-    "            pass\n",
-    "\n",
-    "    class Gielda(Aplikacja):\n",
-    "        metoda_g1(self):\n",
-    "            pass\n",
-    "\n",
-    "        metoda_pobierz_dane(self):\n",
-    "            >pobiera dane z serwisu<\n",
-    "        \n",
-    "        metoda_skrot_info(self):\n",
-    "            >wyswietl skrot informacji na ekranie<\n",
-    "\n",
-    "        metoda_sworz_wykres(self):\n",
-    "            >pokaz kursy akcji na wykresie<\n",
-    "\n",
-    "    class Pogoda(Aplikacja):\n",
-    "        metoda_p1(self):\n",
-    "            pass\n",
-    "\n",
-    "        metoda_wyslij_SMS(self):\n",
-    "            >wyslij sms<\n",
-    "\n",
-    "        metoda_pobierz_dane(self):\n",
-    "            >pobiera dane z serwisu<\n",
-    "\n",
-    "        metoda_sworz_wykres(self):\n",
-    "            >pokaz wilgotnośc na wykresie<\n",
-    "\n",
-    "    class Newsy(Aplikacja):\n",
-    "        metoda_pogrupuj_informacje(self):\n",
-    "            >wyswietla informacje tylko z Polski<\n",
-    "\n",
-    "        metoda_pobierz_dane(self):\n",
-    "            >pobiera dane z serwisu<\n",
-    "    "
+    "Projekt mozna podzielić na następujące klasy:\n",
+    "1. Klasa Aplikacja - obsługuje główne okno programu, podstawowe funkcjonalności i wywołuje odpowiednie mnijesze klasy w zaleności od wyboru uzytkownika.\n",
+    "- Przykładowe metody klasy:\n",
+    "    - bindings(): do obsługi skrótów klawiszowych i gestów\n",
+    "    - notify(): wyświetl powiadomienie na ekranie\n",
+    "    - connect(): połącz z serwerem głównym\n",
+    "    - login(): zaloguj uzytkownika\n",
+    "    - reconnect(): obsługuje utratę połączenia z serwerem\n",
+    "    - display_txt(): wyświetla tekst (artykuł)\n",
+    "    - display_image(): obsługuje wyświetlanie ilustracji i zdjęć\n",
+    "    - play_video(): obługuje wyświetlanie nagrań video\n",
+    "    - play_sound(): obsługuje odwarzanie dźwieku\n",
+    "    - show_summary(): obsługuje wyświetlanie podsumowania najwaniejszych informacji\n",
+    "    - create_tab(): tworzy nowe zakładki z dodanymi przez uzytkownika serwisami (tworzy nową instancję klasy tab)\n",
+    "    - delete_tab(): obługuje usuwanie zakładek przez uzytkownika\n",
+    "2. Klasa Tab(Aplikacja) - obsługuje tworzenie nowej zakładki z informacjami. Dziedziczy z klasy Aplikacja\n",
+    "- Przykładowe metody klasy:\n",
+    "    - get_info(): pobiera listę tematów z wybranego serwisu\n",
+    "    - filter(): filtruje pobrane informacje w zaleznosci od tematów\n",
+    "    - notify_via_sms(): wysyła powiadomienie za pomoca SMS\n",
+    "- Przykłady dziedziczonych metod klasy Aplikacja:\n",
+    "    - display_txt(): j.w.\n",
+    "    - display_video(): j.w.\n",
+    "    - display_sound(): j.w.\n",
+    "3. Klasa Video() - obsługuje materiały video. Umozliwia tworzenie odpowiedniej obiektów o określonych atrybutach (np. wielkość okna, rozdzielczość itp.)\n",
+    "- Przykładowe metody klasy:\n",
+    "    - set_resolution(): konfiguruje rozdzielczośc nagrania\n",
+    "    - set_size(): reguluje wielkość okna odtwarzania\n",
+    "4. Klasa Picture() - obsługuje obrazy/grafiki. Umozliwia tworzenie obiektów o określonych atrubutach (np. wielkośc ilustracji, rozdzielczośc, filtry kolorów)\n",
+    "- Przykładowe metody klasy:\n",
+    "    - set_resolution(): konfiguruje rozdzielczość wyświeltanej ilustracji\n",
+    "    - use_custom_filter(): umozliwia konfiguracje ilustracji z wykorzystaniem odpowiednich filtrów"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bcded42b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b2177e0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc9e3124",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c07114c7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
