new solutions added

--- a/python-zadania-1 - zaliczenie.ipynb
+++ b/python-zadania-1 - zaliczenie.ipynb
@@ -489,7 +489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 10,
       "id": "0e687b88",
       "metadata": {},
       "outputs": [
@@ -497,6 +497,15 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "Wynik działania funkcji pliki_roz:\n",
+            "python-cwiczenia-1-rozwiazania.ipynb\n",
+            "python-cwiczenia-1.ipynb\n",
+            "python-klasy-cwiczenia-1.ipynb\n",
+            "python-klasy-cwiczenia-2.ipynb\n",
+            "python-wyklad-1.ipynb\n",
+            "python-wyklad-2.ipynb\n",
+            "\n",
+            "Wynik działania funkcji pliki_roz2:\n",
             "python-cwiczenia-1-rozwiazania.ipynb\n",
             "python-cwiczenia-1.ipynb\n",
             "python-klasy-cwiczenia-1.ipynb\n",
@@ -519,7 +528,18 @@
         "    list_of_files.sort()\n",
         "    print(*list_of_files, sep=\"\\n\")\n",
         "\n",
-        "pliki_roz(\"notebooks\", \"ipynb\")"
+        "def pliki_roz2(katalog, ext):\n",
+        "    import glob\n",
+        "    path = f\"./{katalog}/\"\n",
+        "    list_of_files = glob.glob(f\"{path}*.{ext}\")\n",
+        "    list_of_files.sort()\n",
+        "    for i in list_of_files: print(i.split(\"/\")[-1])\n",
+        "\n",
+        "print(\"Wynik działania funkcji pliki_roz:\")\n",
+        "pliki_roz(\"notebooks\", \"ipynb\")\n",
+        "print()\n",
+        "print(\"Wynik działania funkcji pliki_roz2:\")\n",
+        "pliki_roz2(\"notebooks\", \"ipynb\")"
       ]
     },
     {
@@ -533,13 +553,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "0f3e52b7",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "180\n"
+          ]
+        }
+      ],
       "source": [
         "def ile_dni_minelo():\n",
-        "..."
+        "    from datetime import date\n",
+        "    now = date.today()\n",
+        "\n",
+        "    # determine current year\n",
+        "    current_year = int(now.strftime(\"%Y\"))\n",
+        "    # calculate how many days have passed\n",
+        "    days_passed = now - date(current_year, 1, 1)\n",
+        "    print(days_passed.days)\n",
+        "\n",
+        "ile_dni_minelo()"
       ]
     },
     {
@@ -555,13 +592,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "e5de4730",
+      "execution_count": 18,
+      "id": "9efbbc9b",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Piwo po sklepu do kot idzie.\n"
+          ]
+        }
+      ],
       "source": [
         "def losowe_zdanie(slowa):\n",
-        "..."
+        "    import random\n",
+        "    lista_slow = random.sample(slowa, len(slowa))\n",
+        "    zdanie = (\" \".join(lista_slow) + \".\").capitalize()\n",
+        "    print(zdanie)\n",
+        "\n",
+        "losowe_zdanie([\"kot\", \"idzie\", \"do\", \"sklepu\", \"po\", \"piwo\"])    "
       ]
     },
     {
@@ -578,13 +628,54 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 19,
+      "id": "6f7b0d89",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "abbreviation: CEST\n",
+            "client_ip: 46.227.241.133\n",
+            "datetime: 2023-06-30T17:51:29.704893+02:00\n",
+            "day_of_week: 5\n",
+            "day_of_year: 181\n",
+            "dst: true\n",
+            "dst_from: 2023-03-26T01:00:00+00:00\n",
+            "dst_offset: 3600\n",
+            "dst_until: 2023-10-29T01:00:00+00:00\n",
+            "raw_offset: 3600\n",
+            "timezone: Europe/Warsaw\n",
+            "unixtime: 1688140289\n",
+            "utc_datetime: 2023-06-30T15:51:29.704893+00:00\n",
+            "utc_offset: +02:00\n",
+            "week_number: 26\n"
+          ]
+        }
+      ],
+      "source": [
+        "from urllib.request import urlopen\n",
+        "\n",
+        "with urlopen('http://worldtimeapi.org/api/timezone/Europe/Warsaw.txt') as response:\n",
+        "    for line in response:\n",
+        "        line = line.decode('utf-8').strip()  # Decoding the binary data to text.\n",
+        "        print(line)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "id": "b313be25",
       "metadata": {},
       "outputs": [],
       "source": [
         "def czas():\n",
-        "..."
+        "    from urllib.request import urlopen\n",
+        "    import json\n",
+        "\n",
+        "    url = \"http://worldtimeapi.org/api/timezone/Europe/Warsaw.json\"\n",
+        "    pass"
       ]
     },
     {
