solution to time task added

--- a/python-zadania-1 - zaliczenie.ipynb
+++ b/python-zadania-1 - zaliczenie.ipynb
@@ -628,54 +628,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
-      "id": "6f7b0d89",
+      "execution_count": 35,
+      "id": "b313be25",
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "abbreviation: CEST\n",
-            "client_ip: 46.227.241.133\n",
-            "datetime: 2023-06-30T17:51:29.704893+02:00\n",
-            "day_of_week: 5\n",
-            "day_of_year: 181\n",
-            "dst: true\n",
-            "dst_from: 2023-03-26T01:00:00+00:00\n",
-            "dst_offset: 3600\n",
-            "dst_until: 2023-10-29T01:00:00+00:00\n",
-            "raw_offset: 3600\n",
-            "timezone: Europe/Warsaw\n",
-            "unixtime: 1688140289\n",
-            "utc_datetime: 2023-06-30T15:51:29.704893+00:00\n",
-            "utc_offset: +02:00\n",
-            "week_number: 26\n"
+            "Aktualny czas w Polsce: 20:28:06\n"
           ]
         }
       ],
       "source": [
-        "from urllib.request import urlopen\n",
-        "\n",
-        "with urlopen('http://worldtimeapi.org/api/timezone/Europe/Warsaw.txt') as response:\n",
-        "    for line in response:\n",
-        "        line = line.decode('utf-8').strip()  # Decoding the binary data to text.\n",
-        "        print(line)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "b313be25",
-      "metadata": {},
-      "outputs": [],
-      "source": [
         "def czas():\n",
         "    from urllib.request import urlopen\n",
         "    import json\n",
+        "    import re\n",
         "\n",
         "    url = \"http://worldtimeapi.org/api/timezone/Europe/Warsaw.json\"\n",
-        "    pass"
+        "\n",
+        "    # read data from url\n",
+        "    with  urlopen(url) as response:\n",
+        "    \n",
+        "        # storing the JSON response \n",
+        "        # from url in data\n",
+        "        data_json = json.loads(response.read())\n",
+        "        \n",
+        "        # find time (HH:MM:SS) in datetime\n",
+        "        time = re.search(r\"(\\d{2}\\:\\d{2}\\:\\d{2})\", data_json[\"datetime\"])\n",
+        "        # print the actual time\n",
+        "        print(\"Aktualny czas w Polsce:\", time.group())\n",
+        "    \n",
+        "czas()"
       ]
     },
     {
@@ -699,7 +684,7 @@
       },
       "outputs": [],
       "source": [
-        "def argumenty(...):\n",
+        "def argumenty(*args):\n",
         "..."
       ]
     },
