solution to **kwargs task added

--- a/python-zadania-1 - zaliczenie.ipynb
+++ b/python-zadania-1 - zaliczenie.ipynb
@@ -677,15 +677,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "id": "8f228742",
       "metadata": {
         "scrolled": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Argumenty funkcji:\n",
+            "a = 0\n",
+            "kon = 1\n",
+            "kot = hehe\n",
+            "michael_jackson = hee-hee\n"
+          ]
+        }
+      ],
       "source": [
-        "def argumenty(*args):\n",
-        "..."
+        "def argumenty(**kwargs):\n",
+        "    # pozyskaj nazwy argumentów\n",
+        "    nazwy_arg = list(kwargs.keys())\n",
+        "\n",
+        "    # posortuj argumenty alfabetycznie po nazwach\n",
+        "    nazwy_arg.sort()\n",
+        "\n",
+        "    # wyświetl posortowane argumenty wraz z wartościami\n",
+        "    print(\"Argumenty funkcji:\")\n",
+        "    for arg in nazwy_arg:\n",
+        "        print(f\"{arg} = {kwargs[arg]}\")\n",
+        "\n",
+        "argumenty(kon=1, kot=\"hehe\", michael_jackson=\"hee-hee\", a=0)"
       ]
     },
     {
